[package]
name = "errorstack"
version = "0.0.1"
edition = "2021"
authors = ["jacktbeaumont"]
description = "A derive-based typed error system with first-class error stack building."
license = "Apache-2.0"
repository = "https://github.com/jacktbeaumont/errorstack"
documentation = "https://docs.rs/errorstack"
readme = "README.md"
